# -OpenCV-By-Example

./: README.md
B04283_02_code/: CMakeLists.txt  sample1.cpp
B04283_03_code/: CMakeLists.txt
B04283_04_code/: CMakeLists.txt
B04283_05_code/: CMakeLists.txt  main.cpp
B04283_06_code/: CMakeLists.txt  main.cpp
B04283_07_code/code/: earDetector.cpp  overlayFacemask.cpp  overlayMoustache.cpp  overlayNose.cpp  overlaySunglasses.cpp
B04283_08_code/code/: backgroundSubtraction.cpp  dilation.cpp  erosion.cpp  frameDifferencing.cpp  morphologicalOperations.cpp
B04283_09_code/code/: camshiftTracker.cpp  lucasKanadeTracker.cpp
B04283_10_code/: segment.cpp  segmentOcr.cpp  segmentOcrHigh.cpp
B04283_11_code/: detection.cpp  ocr.cpp
